[package]
name = "rust-book-server-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"]}
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
jsonwebtoken = {version = "9", default-features = false }
rand = "0.8.5"
serde_with = "3.11.0"
log = "0.4.22"
env_logger = "0.11.5"
